@@ -4690,7 +4690,11 @@ build
   </li>
   <li>
     <code>CONFIG_STMPE11_ACTIVELOW</code>:
-    Interrupt is generated by an active low signal.
+    Interrupt is generated by an active low signal (or falling edge).
+  </li>
+  <li>
+    <code>CONFIG_STMPE11_EDGE</code>:
+    Interrupt is generated on an edge (vs. on the active level)
   </li>
   <li>
     <code>CONFIG_STMPE11_NPOLLWAITERS</code>:
