@@ -968,7 +968,9 @@ CONFIG_INPUT_TSC2007=n
 # CONFIG_STMPE11_MULTIPLE
 #   Can be defined to support multiple STMPE11 devices on board.
 # CONFIG_STMPE11_ACTIVELOW
-#   Interrupt is generated by an active low signal.
+#   Interrupt is generated by an active low signal (or falling edge).
+# CONFIG_STMPE11_EDGE
+#   Interrupt is generated on an edge (vs. on the active level)
 # CONFIG_STMPE11_NPOLLWAITERS
 #   Maximum number of threads that can be waiting on poll() (ignored if
 #   CONFIG_DISABLE_POLL is set).
@@ -994,6 +996,7 @@ CONFIG_STMPE11_SPI=n
 CONFIG_STMPE11_I2C=y
 CONFIG_STMPE11_MULTIPLE=y
 CONFIG_STMPE11_ACTIVELOW=y
+CONFIG_STMPE11_EDGE=y
 #CONFIG_STMPE11_NPOLLWAITERS
 CONFIG_STMPE11_TSC_DISABLE=n
 CONFIG_STMPE11_ADC_DISABLE=y
